# Licensed under the Apache-2.0 license

[package]
name = "caliptra-bitstream-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
google-cloud-storage = { version = "1.11.0", features = ["default-rustls-provider"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
toml = "1.0"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.10"
tokio = { version = "1.37", features = ["full"] }
